DuPont DevSB/src/objects/Initiative_Contact__c.object
<CustomObject>
    <description>Custom object to link multiple contacts to a single initiative record</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact_Name__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Initiatives</relationshipLabel>
        <relationshipName>R00N30000002iTaMEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>The Geographic Scope of the M&amp;S-MSE Initiative-Contact</description>
        <inlineHelpText>The Geographic Scope of the M&amp;S-MSE Initiative-Contact</inlineHelpText>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASIA PACIFIC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiative-Contacts</relationshipLabel>
        <relationshipName>R00N30000002iTaWEAU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Business User</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Expert</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Steering team member</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative-Contact</label>
    <nameField>
        <displayFormat>ID-{YY}{MM}-{0}</displayFormat>
        <label>Initiative-Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initiative-Contact</pluralLabel>
    <recordTypes>
        <fullName>M_S_MSE_Initiative_Contact</fullName>
        <active>true</active>
        <description>M&amp;S - Marketing &amp; Sales Effectiveness Initiative-Contact record type global</description>
        <label>M&amp;S-MSE Initiative-Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>OneDuPont</fullName>
        <active>true</active>
        <description>Record type to link multiple contacts to M&amp;S Initiatives</description>
        <label>OneDuPont</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>